bin_PROGRAMS = clisttest chashtest cdstest circbuftest
clisttest_SOURCES = clist_tests.c
clisttest_LDFLAGS = -lcunit -lm -L../src -lccontainer
clisttest_CFLAGS = -I/usr/include -I../src

chashtest_SOURCES = chash_tests.c
chashtest_LDFLAGS = -lcunit -lm -L../src -lccontainer
chashtest_CFLAGS = -I/usr/include -I../src

cdstest_SOURCES = cdynstorage_tests.c
cdstest_LDFLAGS = -lcunit -lm -L../src -lccontainer
cdstest_CFLAGS = -I/usr/include -I../src

circbuftest_SOURCES = circbuf_tests.c
circbuftest_LDFLAGS = -lcunit -lm -L../src -lccontainer
circbuftest_CFLAGS = -I/usr/include -I../src
